# tradedesk-dukascopy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  prepare-release.yml  publish.yml
tests/: test_cli.py  test_cli_smoke.py  test_decode_ticks.py  test_export_download_backoff.py  test_export_download_bi5.py  test_export_helpers.py  test_export_probe_format.py  test_export_progress.py  test_export_tickt_to_candles.py  test_export_units.py  test_metadata.py
tradedesk_dukascopy/: __init__.py  cli.py  export.py  metadata.py  parallel.py
